[gd_scene load_steps=2 format=3 uid="uid://df7i8g73hxbqr"]

[ext_resource type="Script" path="res://Scripts/modes_screen.gd" id="1_mqrsd"]

[node name="ModesScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mqrsd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.160784, 0.239216, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Select Mode"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="BtnClassic" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Classic"

[node name="BtnTimed" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Timed"

[node name="BtnMoves" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Moves"

[node name="BtnChallenge" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Challenge"

[node name="DescriptionBox" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="DescLabel" type="Label" parent="VBoxContainer/DescriptionBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Hover over a mode to see its rules."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BtnBack" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="mouse_entered" from="VBoxContainer/GridContainer/BtnClassic" to="." method="_on_btn_classic_hover"]
[connection signal="pressed" from="VBoxContainer/GridContainer/BtnClassic" to="." method="_on_btn_classic_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/GridContainer/BtnTimed" to="." method="_on_btn_timed_hover"]
[connection signal="pressed" from="VBoxContainer/GridContainer/BtnTimed" to="." method="_on_btn_timed_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/GridContainer/BtnMoves" to="." method="_on_btn_moves_hover"]
[connection signal="pressed" from="VBoxContainer/GridContainer/BtnMoves" to="." method="_on_btn_moves_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/GridContainer/BtnChallenge" to="." method="_on_btn_challenge_hover"]
[connection signal="pressed" from="VBoxContainer/GridContainer/BtnChallenge" to="." method="_on_btn_challenge_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnBack" to="." method="_on_btn_back_pressed"]
